--- a/content/data/config.json
+++ b/content/data/config.json
@@ -69,7 +69,7 @@
             "address": "312 Lovely Street, Brooklyn, NY, 123456",
             "addressAltText": "My address"
         },
-        "copyrightText": "Powered by [Netlify](https://www.netlify.com/)",
+        "copyrightText": "Powered by [me](https://www.netlify.com/)\n\n",
         "styles": {
             "self": {
                 "width": "narrow",
