--- a/content/data/config.json
+++ b/content/data/config.json
@@ -57,7 +57,7 @@
             "type": "ContactBlock",
             "title": "Contact details",
             "phoneNumber": "850-123-5021",
-            "phoneAltText": "My phone number",
+            "phoneAltText": "",
             "email": "mail@jortvandam.com",
             "emailAltText": "My email",
             "address": "312 Lovely Street, Brooklyn, NY, 123456",
