--- a/content/data/config.json
+++ b/content/data/config.json
@@ -56,7 +56,7 @@
         "contacts": {
             "type": "ContactBlock",
             "title": "Contact details",
-            "phoneNumber": "850-123-5021",
+            "phoneNumber": "",
             "phoneAltText": "",
             "email": "mail@jortvandam.com",
             "emailAltText": "My email",
