config.json: updated emailAltText in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
             "phoneNumber": "",
             "phoneAltText": "",
             "email": "mail@jortvandam.com",
-            "emailAltText": "My email",
+            "emailAltText": "jort@vnav.nl",
             "address": "312 Lovely Street, Brooklyn, NY, 123456",
             "addressAltText": "My address"
         },
