config.json: updated address in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -60,7 +60,7 @@
             "phoneAltText": "",
             "email": "mail@jortvandam.com",
             "emailAltText": "jort@vnav.nl",
-            "address": "312 Lovely Street, Brooklyn, NY, 123456",
+            "address": "",
             "addressAltText": "My address"
         },
         "copyrightText": "",
