config.json: updated addressAltText in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,7 @@
             "email": "mail@jortvandam.com",
             "emailAltText": "jort@vnav.nl",
             "address": "",
-            "addressAltText": "My address"
+            "addressAltText": ""
         },
         "copyrightText": "",
         "styles": {
