--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,7 +11,7 @@
             {
                 "type": "Link",
                 "label": "Over mij",
-                "url": "/info"
+                "url": "/overmij"
             },
             {
                 "type": "Link",
