--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,8 +10,8 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
-                "url": "/info"
+                "label": "Over mij",
+                "url": "/overmij"
             },
             {
                 "type": "Link",
@@ -20,8 +20,8 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
-                "url": "/blog"
+                "label": "Columns",
+                "url": "/columns"
             }
         ],
         "socialLinks": [],
