--- a/content/data/config.json
+++ b/content/data/config.json
@@ -48,7 +48,7 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
+                "label": "columns",
                 "url": "/blog",
                 "altText": ""
             }
