--- a/content/data/config.json
+++ b/content/data/config.json
@@ -48,8 +48,8 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
-                "url": "/blog",
+                "label": "columns",
+                "url": "/columns",
                 "altText": ""
             }
         ],
