config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,7 +21,7 @@
             {
                 "type": "Link",
                 "label": "Columns",
-                "url": "/columns"
+                "url": "/blog"
             }
         ],
         "socialLinks": [],
