--- a/content/data/config.json
+++ b/content/data/config.json
@@ -49,7 +49,7 @@
             {
                 "type": "Link",
                 "label": "columns",
-                "url": "/columns",
+                "url": "/blog",
                 "altText": ""
             }
         ],
