config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,7 +11,7 @@
             {
                 "type": "Link",
                 "label": "Over mij",
-                "url": "/overmij"
+                "url": "/info"
             },
             {
                 "type": "Link",
