--- a/content/data/config.json
+++ b/content/data/config.json
@@ -36,7 +36,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
+                "label": "Over mij",
                 "url": "/info",
                 "altText": ""
             },
