--- a/content/data/config.json
+++ b/content/data/config.json
@@ -43,7 +43,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "mailto:thisismyemail.@myemail.me",
+                "url": "mailto:mail@jortvandam.com",
                 "altText": ""
             },
             {
