config.json: updated copyrightText in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -63,7 +63,7 @@
             "address": "",
             "addressAltText": ""
         },
-        "copyrightText": "",
+        "copyrightText": "2025 - Jort van Dam\n\n",
         "styles": {
             "self": {
                 "width": "narrow",
