config.json: updated email in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -58,7 +58,7 @@
             "title": "Contact details",
             "phoneNumber": "",
             "phoneAltText": "",
-            "email": "mail@jortvandam.com",
+            "email": "jort@vnav.nl",
             "emailAltText": "jort@vnav.nl",
             "address": "",
             "addressAltText": ""
